--- a/template/login.twig
+++ b/template/login.twig
@@ -10,6 +10,6 @@
     <form class="form" action="" method="post">
         <input class="form__input" type="text" placeholder="name" name="name" autofocus>
         <input class="form__input" type="password" placeholder="password" name="pass">
-        <button class="form__btn" type="submit">Save</button>
+        <button class="form__btn" type="submit">Entrance</button>
     </form>
 {% endblock %}
