--- a/files/main.css
+++ b/files/main.css
@@ -49,7 +49,7 @@ h2, h3 {
 
 .user__img {
     width: 70px;
-    height: auto;
+    height: 70px;
     padding: 3px;
     border: 1px solid #ccc;
     border-radius: 50%;
