--- a/files/main.css
+++ b/files/main.css
@@ -48,13 +48,26 @@ h2, h3 {
 }
 
 .user__img {
+    position: relative;
     width: 70px;
     height: 70px;
     padding: 3px;
     border: 1px solid #ccc;
     border-radius: 50%;
-    overflow: hidden;
     background: #ffffff;
+}
+
+.user__pic {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    overflow: hidden;
+    background: no-repeat center;
+    background-size: contain;
 }
 
 .user__age {
