--- a/template/404.twig
+++ b/template/404.twig
@@ -8,6 +8,6 @@
 
 {% block content %}
     <div class="error">
-        <div class="hit-the-floor">404 <br> file not found</div>
+        <div class="hit-the-floor">404 <br> page not found</div>
     </div>
 {% endblock %}
