--- a/files/main.css
+++ b/files/main.css
@@ -27,6 +27,37 @@ a {
     cursor: pointer;
 }
 
+.start {
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start__btn {
+    width: 200px;
+    height: 100px;
+    margin: 5px;
+    text-align: center;
+    line-height: 100px;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: 2px solid #cccccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 5px;
+    transition: .3s background-color ease, .3s color ease;
+}
+
+.start__btn:hover {
+    background: rgba(0, 0, 0, .5);
+    color: rgba(255, 255, 255, .5)
+}
+
+.start__btn:active {
+    box-shadow: inset 0 0 7px #b1b1b1;
+}
+
 .hidden {
     display: none;
 }
@@ -39,6 +70,7 @@ a {
 }
 
 .user__item {
+    position: relative;
     list-style-type: none;
     width: 250px;
     padding: 5px;
@@ -52,6 +84,13 @@ a {
 
 .user__item:hover {
     background: #d3d3d3;
+}
+
+.user__idx {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: .7rem;
 }
 
 .user__img {
