--- a/template/add.twig
+++ b/template/add.twig
@@ -8,7 +8,7 @@
 
 {% block content %}
     <form class="form" action="" method="post" enctype="multipart/form-data">
-        <input class="form__input" type="file" name="file">
+        <input class="form__input" type="file" name="file[]" multiple>
         <button class="form__btn" type="submit">Save</button>
     </form>
 {% endblock %}
