--- a/template/userFile.twig
+++ b/template/userFile.twig
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="files">
-        <ul class="files__list clearfix">
+        <ul class="files__list">
             {% for file in context %}
                 <li class="files__item">
                     <img src="/images/files/{{ file.file_name }}" alt="file" class="files__img">
