--- a/template/register.twig
+++ b/template/register.twig
@@ -10,6 +10,7 @@
     <form class="form" action="" method="post" enctype="multipart/form-data">
         <input class="form__input" type="text" placeholder="name" name="name" required autofocus>
         <input class="form__input" type="text" placeholder="age" name="age" required>
+        <input class="form__input" type="email" placeholder="e-mail" name="email" required>
         <textarea class="form__input" name="desc" rows="5" placeholder="description" required></textarea>
         <input class="form__input" type="file" name="file">
         <input class="form__input" type="password" placeholder="password" name="pass" required>
